Fix shifty text and test on 3 browser types

--- a/frontend/components/TabsWrapper/_styles.scss
+++ b/frontend/components/TabsWrapper/_styles.scss
@@ -16,7 +16,7 @@
       display: inline-flex;
       flex-direction: column;
       align-items: center;
-      bottom: -2px; // Fix shifty text
+      line-height: 19px; // Fix shifty bold text
 
       &:focus {
         box-shadow: none;
@@ -41,7 +41,6 @@
       }
       &--selected {
         font-weight: $bold;
-        bottom: -4px; // fix shifty bold text
 
         &::after {
           content: "";
